--- a/assets/translations/id.json
+++ b/assets/translations/id.json
@@ -1,5 +1,6 @@
 {
   "AppTitle": "Aplikasi Supabase",
+  "you_pushed_the_button" : "Kamu telah menekan tombol sebanyak ini:",
   "languages": {
     "english": "Inggris",
     "indonesian": "Indonesia"
