--- a/assets/translations/id.json
+++ b/assets/translations/id.json
@@ -19,12 +19,16 @@
   "profile": "Profil",
 
 
-  "add_gallery": "Tambah Galeri",
-  "gallery": "Galeri",
-  "delete_gallery": "Delete Galeri",
+  "add_todo": "Tambah Tugas",
+  "todo": "Tugas",
+  "delete_todo": "Delete Tugas",
   "delete": "Hapus",
   "create": "Buat",
   "update": "Perbarui",
+
+  "enter_todo_titles": "Masukkan Judul Todo",
+  "todo_titles": "Judul Todo",
+  "this_required": "Bagian ini wajib",
 
   "name": "Nama",
   "email": "Email",
